--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/application.properties
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SerranoRuizMauro
 
 server.port=9000
 
-spring.datasource.url=jdbc:h2:./db/basededatos;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:./db/basededatos;
 
 spring.datasource.username=sa
 spring.datasource.password=
