--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/application.properties
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:h2:./db/basededatos;
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.enabled=true
 
